--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,6 +1,10 @@
 
 @import "compass/utilities/sprites";
 
+// ============================================================================
+//  Grid functions
+// ============================================================================
+
 
 $cols: 12;
 $gutter: 2%;
@@ -20,7 +24,7 @@ $one_col: (100% - ($gutter * ($cols - 1))) / $cols;
 }
 
 // ============================================================================
-//    WAI and W3C support
+//  WAI and W3C support
 //=============================================================================
 
 // Hide from both screenreaders and browsers: h5bp.com/u 
