--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,15 +1,13 @@
 /* ============================================================================
+    Import from common.scss
     
-    3. THEMED (Design specific rules)
-    
-    Import from THEMED.scss
-    
+    4. COMMON (Design specific rules)
 ============================================================================= */
 
-@import "_mixins";
+@import "mixins";
 
 /* ============================================================================
-    3.1 Header
+    4.1 Header
 ============================================================================= */
 
 #header {
@@ -60,19 +58,19 @@
 }
 
 /* ============================================================================
-    3.2 Main
+    4.2 Main
 ============================================================================= */
 
 /* ============================================================================
-    3.3 Aside
+    4.3 Aside
 ============================================================================= */
 
 /* ============================================================================
-    3.4 Pages
+    4.4 Pages
 ============================================================================= */
 
 /* ============================================================================
-    3.5 Footer
+    4.5 Footer
 ============================================================================= */
 
 #footer {
@@ -107,7 +105,7 @@
 }
 
 /* ============================================================================
-    3.6 Other
+    4.6 Other
 ============================================================================= */
 
 /* Opera speed dial minimized */
