--- a/sass/_plugin-support.scss
+++ b/sass/_plugin-support.scss
@@ -1,9 +1,11 @@
 /* ============================================================================
-Import from plugin-support.scss
+    Import from plugin-support.scss
+
+    6. PLUGINS SUPPORT  
 ============================================================================= */
 
 /* ============================================================================
-Select box plugin support
+    Select box plugin support
 ============================================================================= */
 
 /* applied to original <select> to hide */
@@ -207,7 +209,7 @@ Select box plugin support
 }
 
 /* ============================================================================
-Checkbox plugin support
+      Checkbox plugin support
 ============================================================================= */
 
 .jquery-checkbox {
