--- a/sass/_print.scss
+++ b/sass/_print.scss
@@ -1,6 +1,8 @@
-/*
-  Media Print
-*/
+/* ============================================================================
+    Import from print.scss 
+    
+    4. MEDIA PRINT
+============================================================================= */
 
 @media print {
 /* some general resets */
