--- a/sass/_specific-html-support.scss
+++ b/sass/_specific-html-support.scss
@@ -1,5 +1,5 @@
 /* ============================================================================
-    Import from Specific-html-support.scss
+    Import from specific-html-support.scss
     
     2. Specific html tags support
 ============================================================================= */
