--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,10 +1,9 @@
 
-@import "compass/utilities/sprites";
+//@import "compass/utilities/sprites";
 
 // ============================================================================
 //  Grid functions
 // ============================================================================
-
 
 $cols: 12;
 $gutter: 2%;
