--- a/sass/_screen.scss
+++ b/sass/_screen.scss
@@ -1,10 +1,10 @@
 /* ============================================================================
     Import from screen.scss 
     
-    4.MEDIA QUERIES
+    4. MEDIA QUERIES 
 ============================================================================= */
 
-@import "_mixins.scss";
+@import "mixins";
 
 @media screen and (min-width:1281px) {
   #device-visualizer {
