--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,5 +1,8 @@
 
 //@import "compass/utilities/sprites";
+// @import "icons/*.png";
+// $icons-layout:smart;
+// $icons-spacing: 10px;
 
 // ============================================================================
 //  Grid functions
