--- a/sass/_plugin-support.scss
+++ b/sass/_plugin-support.scss
@@ -4,6 +4,8 @@
     6. PLUGINS SUPPORT  
 ============================================================================= */
 
+@import "mixins";
+
 /* ============================================================================
     Select box plugin support
 ============================================================================= */
