--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -1,7 +1,7 @@
 //  __  __  __    _
 //  \ \/  \/ /__ (_) __  __                /\
 //   \  /\  / -_)| |(__ (__            /\ /  \/\
-//    \/  \/\___||_| __) __) css framework /\/\ \
+//    \/  \/\___||_| __) __) css helper    /\/\ \
 //          http://dimanech.github.com/weiss/  \ \
 //
 // ============================================================================
@@ -10,6 +10,8 @@
 
 // http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+
+@import "mixins";
 
 $mainBgColor: #fff;
 $mainFgColor: #ccc;
@@ -60,9 +62,6 @@ blockquote, q {
     1.1. Typography
 ============================================================================= */
 
-@import "compass/typography/vertical_rhythm";
-// http://compass-style.org/reference/compass/typography/vertical_rhythm/
-
 $sans: Arial, FreeSans, sans-serif;
 $hSans: Verdana,"Bitstream Vera Sans","DejaVu Sans", sans-serif;
 $hSansCond: Tahoma, Geneva, "DejaVu Sans Condensed", sans-serif;
@@ -72,6 +71,9 @@ $aSerif: Palatino, "Palatino Linotype", Palladio, "URW Palladio L", "Book Antiqu
 $monospSerif: "Courier New", Courier, FreeMono, "Nimbus Mono L", monospace;
 $monospSans: "Lucida Console", Monaco, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
 $grotCond: "Arial Narrow", "DejaVu Sans Condensed", sans-serif;
+$futura: "FuturaMediumRegular", Futura, "URW Gothic L", Arial, FreeSans, sans-serif;
+
+// Crossbrowser custom font support
 
 $onBodyCustomFont: false;
 
@@ -80,20 +82,27 @@ $customFontIt: 'myriadproItalic', Arial, FreeSans, sans-serif;
 $customFontBold: 'myriadproBold', Arial, FreeSans, sans-serif;
 $customFontBlIt: 'myriadproBoldItalic', Arial, FreeSans, sans-serif;
 
+// Font configuration
+
 $baseFontFamily: $sans;
 $baseFontFamilyMono: $monospSerif;
 
 $base-font-size: 14px; // The font size set on the root html element.
 $base-line-height: 18px; // This line-height determines the basic unit of vertical rhythm.
 
-$h1-font-size: 2.1 * $base-font-size;
-$h2-font-size: 1.5 * $base-font-size;
-$h3-font-size: 1.17 * $base-font-size;
-$h4-font-size: 1 * $base-font-size;
-$h5-font-size: 0.83 * $base-font-size;
-$h6-font-size: 0.75 * $base-font-size;
+// http://modularscale.com/
 
-h1, h2, .h1, .h2, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
+$h1-font-size: 1.942 * $base-font-size;
+$h2-font-size: 1.618 * $base-font-size;
+$h3-font-size: 1.201 * $base-font-size;
+$h4-font-size: 1 * $base-font-size;
+$h5-font-size: 0.742 * $base-font-size;
+$h6-font-size: 0.618 * $base-font-size;
+
+h1, h2,
+.h1, .h2,
+h3, h4, h5, h6,
+.h3, .h4, .h5, .h6 {
   @if $onBodyCustomFont {
     font-weight: normal;
     font-family: $customFontBold;
@@ -181,9 +190,11 @@ a {
 
   &:visited {
     color: $lnColor;
+    outline: 1px dotted;
   }
 
-  &:hover, &:active {
+  &:hover,
+  &:active {
     color: $lnHoverColor;
   }
 
@@ -231,8 +242,8 @@ video {
     1.2. Lists and tables
 ============================================================================= */
 
-/* Lists
-   --------------------------------------------------------------------------*/
+/* @group Lists
+--------------------------------------------------------------------------- */
 
 ul, ol, dl {
   margin: rhythm(1) 0;
@@ -257,7 +268,8 @@ ol ul {
   list-style: disc; // ul inside ul fix
 }
 
-dl dt, dfn {
+dl dt,
+dfn {
   font-weight: bold;
   font-style: italic;
 }
@@ -266,8 +278,10 @@ dl dd {
   margin-left: 1.5em;
 }
 
-/* Tables
-   --------------------------------------------------------------------------*/
+/* @end */
+
+/* @group Tables
+--------------------------------------------------------------------------- */
 
 table {
   border-collapse: collapse;
@@ -334,6 +348,8 @@ tfoot {
     font-style: italic;
   }
 }
+
+/* @end */
 
 /* ============================================================================
     1.3. Forms
@@ -505,6 +521,18 @@ input::-moz-focus-inner {
 //   -webkit-appearance: none;
 // }
 
+/* form support */
+
+.form__row {
+  overflow: hidden;
+  padding: .4em 0;
+}
+
+.form__item {
+  float:left;
+  padding: 0 .4em 0 0;  
+}
+
 /* ============================================================================
     1.4. Specific
 ============================================================================= */
@@ -550,20 +578,16 @@ figure {
     1.5 Basic masterclasses
 ============================================================================= */
 
-.clearfix {
+.weiss-cf {
   
-  &:before {
+  &:before,
+  &:after {
     content:"";
     display:table;
   }
 
   &:after {
-    clear: both;
-    content: ".";
-    display: block;
-    height: 0;
-    font-size: 0;
-    visibility: hidden;
+    clear:both;
   }
 
   .ie6-7 & {
@@ -573,32 +597,32 @@ figure {
 
 /* position support */
 
-.c-container {
+.weiss-aux {
   width: $containerWidth;
   margin: 0 auto;
 }
 
-.left-side {
+.weiss-l {
   float:left;
 }
 
-.right-side {
+.weiss-r {
   float:right;
 }
 
 // .ie6 {
- // .right-side, .left-side {
+ // .weiss-r, .weiss-l {
    // display:inline; 
  // }
 // }
 
-.br {
+.weiss-br {
   display:block;
 }
 
 /* style support */
 
-.psln {
+.weiss-psln {
   color: $lnColor;
   text-decoration:none;
   border-bottom: 1px dashed;
@@ -610,35 +634,22 @@ figure {
   }
 }
 
-/* form support */
-
-.form-row {
-  overflow:hidden;
-  clear:both;
-  padding: .4em 0;
-}
-
-.form-item {
-  float:left;
-  padding: 0 .4em 0 0;  
-}
-
 /* hacks and long rules */
 
-.opacity {
+.weiss-op {
   opacity: .85;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity = 85)";
   filter: alpha(opacity = 85);
 }
 
-.dib { // additional classes for overwrite IE make trouble in @extend funct
+.weiss-dib { // additional classes for overwrite IE make trouble in @extend funct
   display:inline-block;
   vertical-align: top;
   *display: inline;
   *zoom: 1;
 }
 
-.ir {
+.weiss-ir {
   border: 0;
   font: 0/0 a;
   text-shadow: none;
@@ -646,9 +657,9 @@ figure {
   background-color: transparent;
 }
 
-.img-container { // image wrapper
+.weiss-img-container { // image wrapper
   overflow: hidden;
-  @extend .dib;
+  @extend .weiss-dib;
 
   img {
     display: block;
@@ -660,7 +671,7 @@ figure {
     Sprite support
 ============================================================================= */
 
-.ico {
+.weiss-ico {
   /* background: url("../images/main-sprite.png") 0 0 no-repeat; */
   display: inline-block;
   position: relative;
