hide comment in mixing

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -55,9 +55,9 @@
   visibility: hidden;
 }
 
-/* ============================================================================
-   Create CSS Triangles
-============================================================================ */
+//============================================================================
+//   Create CSS Triangles
+//============================================================================
 
 // Create CSS Triangles in a Breeze
 
